# crab

./: .gitignore  Cargo.toml  README.md  log4rs.yaml  rollup.config.js
assets/css/: styles.css
assets/js/: bundle.js
src/: lib.rs  main.rs
src/config/: app.toml  cert.pem  router.rs  rsa_private_key.pem  rsa_public_key.pem
src/config/locale/: en.json  zh-CN.json
src/controllers/app/: home.rs
src/core/: app.rs  db.rs  i18n.rs  mod.rs  redis.rs  util.rs
src/models/: mod.rs  post.rs
src/view/: Cargo.toml  app.rs  lib.rs
src/view/component/: mod.rs
src/view/component/base/: boxes.rs  button.rs  mod.rs  theme.rs
static/: hi.html  test_yew.html
static/js/: main.js
