[package]
name = "crab"
version = "0.0.1"
authors = ["caiwenxiong <caiwxiong@qq.com>"]
edition = "2018"
description = "crab is a mvc web framework base on actix-web"
readme = "README.md"
keywords = ["actix-web", "http", "web", "framework", "rust mvc"] 
repository = ""
license = "MIT/Apache-2.0"

[dependencies]
actix = "0.9.0"
actix-web = { version = "3.0.0-alpha.3", features = ["openssl"] }
actix-rt = "1"
actix-files = "0.3.0-alpha.1"
toml = "0.5"
actix-http = "2.0.0-alpha.2"
actix-service = "1.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
log = "0.4.8"
chrono = "0.4"
log4rs = "0.11.0"
log-mdc = "0.1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
actix-redis = "0.9.0-alpha.1"
actix-session = "0.4.0-alpha.1"
redis = { version = "0.15", features = ["cluster"] }
r2d2_redis = "0.13.0"
r2d2_redis_cluster = "0.1.5"
diesel = { version = "1.4.4", features = ["postgres","mysql","sqlite","r2d2"] } 
r2d2 = "0.8.8"
openssl = "0.10"
actix-cors = "0.3.0-alpha.1"
json = "0.12.4"
futures = "0.3.5"

[lib]
name = "crab"
path = "src/lib.rs"