[package]
name = "crab"
version = "0.0.1"
authors = ["caiwenxiong <caiwxiong@qq.com>"]
edition = "2018"
description = "crab is a mvc web framework base on actix-web"
readme = "README.md"
keywords = ["actix-web", "http", "web", "framework", "rust mvc"] 
repository = ""
license = "MIT/Apache-2.0"

[dependencies]
wasm-logger = "0.2.0"
log = "0.4.8"
wasm-bindgen = "0.2"
yew = { version = "0.16.2", features = ["web_sys"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

serde_json = "1.0" 

css-in-rust = { version = "0.4.1", features = ["yew_integration"]}

[lib]
#name = "crab-yew"
path = "lib.rs"
# yew wasm-pack 
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.2"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
